# forastero

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  python-package.yml  tests.yml
docs/: bench.md  component.md  components.md  index.md  io.md  logging.md  monitor.md  parameters.md  scoreboard.md  sequences.md  testbench.md  testcases.md  transaction.md
docs/classes/: driver.md  sequences.md
docs/components/: driver.md  index.md  io.md  monitor.md  transaction.md
example/: Makefile  arbiter.sv  params.json  results.xml
example/sim_build/: sim.vvp
example/testbench/: __init__.py  testbench.py
example/testbench/stream/: __init__.py  io.py  monitor.py  responder.py  transaction.py
example/testbench/testcases/: __init__.py  random.py  sequences.py  smoke.py
examples/arbiter/: .gitignore  Makefile  params.json
examples/arbiter/testbench/: testbench.py
examples/arbiter/testbench/stream/: initiator.py  io.py
examples/arbiter/testbench/testcases/: random.py  sequences.py
examples/arbiter_strict/: Makefile  params.json  trace.gtkw
examples/arbiter_strict/testbench/: testbench.py
examples/arbiter_strict/testbench/testcases/: __init__.py  random.py  random_iterable.py  sequences.py
examples/arbiter_window/: Makefile  params.json
examples/arbiter_window/testbench/: testbench.py
examples/arbiter_window/testbench/testcases/: __init__.py  random.py  sequences.py  smoke.py
examples/common/io/stream/: __init__.py  monitor.py  sequences.py
examples/common/rtl/: arbiter.sv
forastero/: __init__.py  bench.py  component.py  driver.py  event.py  io.py  monitor.py  queue.py  scoreboard.py  sequence.py  transaction.py
