[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forastero"
version = "1.0"
description = "Framework for using cocotb"
authors = ["Peter Birch <peter@lightlogic.co.uk>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
ruff = "^0.0.282"
black = "^23.7.0"
pytest = "^7.4.0"
cocotb = "^1.8.0"
tabulate = "^0.9.0"

[tool.ruff]
# See https://beta.ruff.rs/docs/rules
select = ["E", "F", "B", "UP", "N", "W", "I", "A", "C4", "PTH", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []
target-version = "py311"
# Character length of 88 is compatible with Black
line-length = 88
