[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forastero"
version = "1.0"
description = "cocotb verification framework with the batteries included"
authors = ["Peter Birch <peter@lightlogic.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "http://forastero.intuity.io"
keywords = ["cocotb", "verification", "verilog", "systemverilog"]

[tool.poetry.dependencies]
python = "^3.11"
cocotb = "^1.8.0"
tabulate = "^0.9.0"
yappi = "^1.6.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
ruff = "^0.5.7"
pre-commit = "^3.6.2"
pytest = "^8.1.1"

[tool.ruff]
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "N", "W", "I", "A", "C4", "PTH", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
